add jsonld-lint validation
